--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,75 @@ server:
 spring:
   application:
     name: springboot3x-webflux
+  # Redis配置
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
+      # password: your_password  # 如果有密码，请取消注释并设置
+      timeout: 10000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-wait: -1ms
+          max-idle: 8
+          min-idle: 0
+  cloud:
+    gateway:
+      routes:
+        - id: example_route
+          uri: http://example.com
+          predicates:
+            - Path=/example/**
+          filters:
+            - StripPrefix=1
+            - AddResponseHeader=X-Response-Default-Header, Default-Header-Value
+        
+        - id: user_service_route
+          uri: http://localhost:8082
+          predicates:
+            - Path=/aaa/**
+          filters:
+            - StripPrefix=0
+            - AddResponseHeader=X-Response-User-Header, User-Service-Header
+
+      default-filters:
+        - AddResponseHeader=X-Response-Default-Header, Default-Header-Value
+        - AddRequestHeader=X-Request-Default-Header, Default-Header-Value
+        - name: RequestRateLimiter
+          args:
+            redis-rate-limiter.replenishRate: 10
+            redis-rate-limiter.burstCapacity: 20
+            redis-rate-limiter.requestedTokens: 1
+
+# Resilience4j Circuit Breaker 配置
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        # 滑动窗口大小
+        slidingWindowSize: 10
+        # 最小调用次数
+        minimumNumberOfCalls: 5
+        # 半开状态允许的调用次数
+        permittedNumberOfCallsInHalfOpenState: 3
+        # 断路器打开状态的等待时间
+        waitDurationInOpenState: 5s
+        # 失败率阈值
+        failureRateThreshold: 50
+        # 是否注册健康指示器
+        registerHealthIndicator: true
+    instances:
+      myCircuitBreaker:
+        baseConfig: default
+  timelimiter:
+    configs:
+      default:
+        timeoutDuration: 5s
+    instances:
+      myCircuitBreaker:
+        baseConfig: default
 
 # Actuator配置
 management:
@@ -13,4 +82,11 @@ management:
         include: "*"
   endpoint:
     health:
-      show-details: always 
+      show-details: always
+    circuitbreakers:
+      enabled: true
+  health:
+    circuitbreakers:
+      enabled: true
+    redis:
+      enabled: false
